package survival.model.game;

/**
 * 게임 내 이벤트 유형 열거형
 */
public enum EventType {
    RESOURCE_GAIN, // 자원 획득
    DAMAGE,        // 피해
    HEAL,          // 회복
    SPECIAL        // 특별 이벤트
} 
