package survival.model.game;

/**
 * 게임 내 아이템 유형 열거형
 */
public enum ItemType {
    TOOL,     // 도구
    SHELTER,  // 쉘터
    SURVIVAL, // 생존 용품
    RAFT      // 뗏목
} 
